styles.css
body{
    width: 100%;
    height: 100vh;
    margin: 0;
    background-color: rgb(132, 146, 142);
    color: #f5f6f7;
    font-family: Tahoma;
    font-size: 25px;
}
hr{
    margin-bottom: 45px;
    margin-top: -20px;
    width: 50%;
}

h2, h3{
    margin: 1em auto;
    text-align: center;
}

ul{
    list-style-type: none;
}

input{
    margin: auto;
    width: 90%;
    min-height: 2em;
    box-sizing: border-box;
    vertical-align: middle;
}

/* FIX trying to add*/
.checkbox{
    width: 30px;
    height: 30px;
    position: relative;
    bottom: 1px;
    padding-bottom: 10px;
    margin: 0;
    float: right;
    top: -1px;
    right: auto;
    /* FIX */
    background: transparent;
    content: url("x-icon.png");
    pointer-events: auto;
}

.checkbox:hover {
    cursor: pointer;;
  }
  input[type=checkbox]:after {
    background-color: #9FFF9D;
  }

#title{
    font-size: 50px;
}

label{
    display: block;
    padding-left: 0px;
    padding-bottom: 10px;
    text-indent: -20px;
    pointer-events: none;
}

.center-block{
    margin: auto;
    width: 300px;
    position: relative;
}

.items-list{
    margin: auto;
    width: 400px;
    position: relative;
}

/* FIX */
#add-item-button{
    /* margin: 10px 0px 10px 0px; */
    vertical-align: middle;
    display: inline;
    margin-left: 1px;
    margin-top: 5px;
    width: 10%;
    min-height: 2em;
    position: absolute;
}

#pick-random-item{
    margin: 10px 0px 10px 0px;
    width: 50%;
    min-height: 2em;
}
#remove-items-button{
    margin: 10px 0px 10px 0;
    width: 50%;
    min-height: 2em;
    position: absolute;
}
#clear-items-button{
    margin: 0 auto;
    display: block;
    width: 50%;
    min-height: 2em;
    /* position: relative; */
}

